# stream-cipher-cpp

./: CMakeLists.txt  LICENSE  README.md  main.cc
include/: salsa.h
src/: main.cc  salsa.cc
